[package]
name = "quasar"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
solana-program = "1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0.24"
arrayref = "0.3.6"
fixed = "=1.9.0"
num_enum = "^0.5.1"
bytemuck = "^1.7.2"
mango = { git = "https://github.com/blockworks-foundation/mango-v3.git",  features = ["no-entrypoint"] }
mango-macro = { git = "https://github.com/blockworks-foundation/mango-v3.git" }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3.git" }

[features]
no-entrypoint = []
test-bpf = []
devnet = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"
solana-logger = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]